--- a/style.css
+++ b/style.css
@@ -1,17 +1,30 @@
 @font-face {
-    font-family: "Nexa";
-    src: url("fonts/NexaLight.otf") format('otf');
-    src: url("fonts/NexaBold.otf") format('woff');
+  font-family: "Nexa";
+  src: url("NexaLight.eot"), /* IE9 Compat Modes */
+       url("NexaLight.svg") format("svg"), /* Legacy iOS */
+       url("fonts/NexaLight.otf") format('opentype'), 
+       url("fonts/NexaLight.ttf") format('truetype'), /* Safari, Android, iOS */
+       url("fonts/NexaLight.woff") format('woff'), /* Modern Browsers */
+       url("fonts/NexaLight.woff2") format('woff2');
+}
+
+@font-face {
+  font-family: "Nexa";
+  font-weight: bold;
+  src: url("NexaBold.eot"), 
+       url("NexaBold.svg") format("svg"), 
+       url("fonts/NexaBold.otf") format('opentype'), 
+       url("fonts/NexaBold.ttf") format('truetype'), 
+       url("fonts/NexaBold.woff") format('woff'), 
+       url("fonts/NexaBold.woff2") format('woff2');
 }
 
 :root {
     --background-color: #111;
-    --bar-color: #222;
     --text-color: #fff;
     --text-hover-color: #999;
 }
 
-/* Resets... everything? Box-sizing so padding doesnt affect width. Clear margin and padding.  */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -22,7 +35,8 @@ body {
     font-family: "Nexa";
     background: var(--background-color);
     color: var(--text-color);
-    overflow:hidden;
+    /* overflow:hidden; */
+    line-height: 1.3;
 }
 
 .center {
@@ -32,21 +46,20 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.upper-center {
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .text-center {
     text-align: center;
 }
 
-.short-center {
-    width: 5rem;
-    border: 2px solid var(--text-color);
-    margin: auto;
-}
 
 .red-color-transition {
-  transition:color .2s ease-in;
-  /* -moz-transition:color .2s ease-in;
-  -o-transition:color .2s ease-in;
-  -webkit-transition:color .2s ease-in; */
+  transition:color .15s ease-in;
 }
 
 .red-color-transition:hover {
@@ -66,41 +79,142 @@ body {
   color: lightseagreen;
 }
 
+.text-bold {
+  font-weight: bold;
+}
 
+.nowrap {
+  white-space: nowrap;
+}
+
+
+.button:hover {
+  background-color: lightseagreen;
+  /* color: var(--text-hover-color); */
+}
+
+.button {
+  background-color: lightskyblue;
+  border: none;
+  color: var(--text-color);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 
 
 /* Header CSS ----------------------------------------------------------------------------------------------------------------------------------- */
-.topnav {
-  overflow: hidden;
-  float: right;
-  /* background-color: #333; */
+
+#header {
+  position: fixed;
+  display: flex;
+  -moz-box-pack: justify;
+  justify-content: flex-end;
+  -moz-box-align: center;
+  align-items: center;
+  filter: none !important;
+  pointer-events: auto !important;
+  user-select: auto !important;
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+  box-shadow: rgba(2, 12, 27, 0.7) 0px 10px 30px -10px;
+  z-index: 10;
+  background-color: var(--background-color);
+  top: 0px;
+  padding: 0px 50px;
+  width: 100%;
+  height: 70px;
 }
 
-.topnav a {
+.stylednav {
+  position: relative;
+  display: flex;
+  -moz-box-pack: justify;
+  justify-content: flex-end;
+  -moz-box-align: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  color: rgb(204, 214, 246);
+  counter-reset: item 0;
+  z-index: 12;
+}
+
+.nav-items {
+  display: flex;
+  -moz-box-align: center;
+  align-items: center;
+  position: fixed;
+  transition: top 0.3s;
+  /* No overflow so dropdowns work */
+  z-index: 2;
+}
+
+
+.nav-items a {
   float: left;
-  color: #fff;
+  color: var(--text-color);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
 }
 
-.topnav a:hover {
-  /* background-color: #ddd; */
+.nav-items a:hover {
   color: red;
 }
 
-.topnav a.active {
-  /* background-color: orange; */
+.nav-items a.active {
   color: red;
 }
 
+.dropdown-list {
+  position: relative;
+}
+
+.dropdown-list > ul {
+  position: absolute;
+  top: 100%;
+  display: none;
+  -moz-box-pack: center;
+  -moz-box-align: center;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+}
+
+.dropdown-item {
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color);
+  /* padding: 14px 16px; */
+}
+
+.dropdown-item a {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+.dropdown-item a:hover {
+  color: red;
+}
+
+.dropdown-list:hover > ul {
+  display: flex;
+}
+
+
+
+/* Intro CSS ----------------------------------------------------------------------------------------------------------------------------------- */
 .intro > h1 {
   font-size: 3.5rem;
   font-weight: 900;
+  -webkit-font-smoothing: antialiased;
   line-height: 1.2;
   text-align: left;
-  text-shadow: 2px 5px 6px rgba(0,0,0,.4),0 -5px 35px hsla(0,0%,100%,.5);
+  text-shadow: 2px 4px 5px rgba(0,0,0, 0.4), 0 -5px 35px rgba(255, 255, 255, 0.5);
 }
 
 .intro > p {
@@ -108,11 +222,7 @@ body {
   font-weight: 600;
   margin: 20px 0;
   text-align: left;
-  text-shadow: 2px 5px 6px rgba(0,0,0,.3),0 -5px 35px hsla(0,0%,100%,.3);
-}
-
-.contact {
-  display: block;
+  text-shadow: 2px 4px 5px rgba(0,0,0, 0.3), 0 -5px 35px rgba(255, 255, 255, 0.3);
 }
 
 .intro .contact {
@@ -130,6 +240,197 @@ body {
 
 
 
+/* Internship Page CSS ----------------------------------------------------------------------------------------------------------------------------------- */
+
+/* Button on main */
+.bot {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.inline-block > p {
+  display: inline;
+}
+
+.short-hr {
+  width: 300px; 
+  /* text-align: center;  */
+  border-bottom: 1px solid #000; 
+  line-height: 0.1em;
+  margin: 0 0.5rem 0.3rem;
+}
+
+.main-container {
+  padding: 0px 150px;
+  margin: 0px auto;
+  width: 100%;
+  max-width: 1600px;
+  min-height: 100vh;
+  background-color: darkslategrey;
+}
+
+.projects-section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0px auto;
+  padding: 150px 0px;
+  display: flex;
+  -moz-box-pack: center;
+  justify-content: center;
+  -moz-box-align: center;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.projects-section > h2 {    
+  position: relative;
+  display: flex;
+  -moz-box-align: center;
+  align-items: center;
+  margin: 10px 0px 50px;
+  width: 100%;
+  font-size: 32px;
+  white-space: nowrap;
+}
+
+.projects-section > h2::after {
+  content: "";
+  display: block;
+  height: 1px;
+  width: 300px;
+  background-color: var(--text-color);
+  position: relative;
+  margin-left: 25px;
+}
+
+
+.project-layout {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex: 1 1 100%;
+  min-height: 280px;
+  border-top: 0;
+  margin-bottom: 100px;
+}
+
+.project-layout a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+
+.project-layout a:hover {
+  color: var(--text-hover-color);
+  transition:color .15s ease-in;
+}
+
+.project-img {
+  flex: 1 1 auto;
+}
+
+.project-img > img {
+  max-width: 700px;
+}
+
+.project-content { 
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 75px 0 0;
+}
+
+.align-right .project-content {
+  padding: 0 0 0 75px;
+}
+
+.project-content > h4 {
+  position: relative;
+  font-size: 13px;
+  font-weight: normal;
+  color: rgb(100, 255, 218);
+  
+  margin: 10px 0px 5px;
+  padding-top: 0px;
+}
+
+.project-content > h3 {
+  position: relative;
+  margin: 0px 0px 20px;
+}
+
+.project-content > p {
+  position: relative;
+  background-color: rgb(23, 42, 69);
+  box-shadow: rgba(2, 12, 27, 0.7) 0px 10px 30px -15px;
+  border-radius: 3px;
+  padding: 25px;
+  z-index: 2;
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
+  font-size: 18px;
+  color: rgb(168, 178, 209);
+}
+
+.skills-list {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 2;
+  padding: 0px;
+  margin: 25px 0px 10px;
+  list-style: outside none none;
+}
+
+.skill-item {
+  margin-left: 0px;
+  margin-right: 20px;
+}
+
+.align-right {
+  text-align: right;
+}
+
+.align-right .skills-list {
+  -moz-box-pack: end;
+  justify-content: flex-end;
+  text-align: right;
+}
+
+.align-right .skill-item {
+  margin-left: 20px;
+  margin-right: 0px;
+}
+
+
+
+
+
+
+
+/* 
+.projects { marks next section
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 100vh;
+}
+
+.projects-header {
+  position: relative;
+  top: 15%;
+}
+
+.projects-header > h2 {
+  position: relative;
+  left: -15%;
+} */
 
 
 
@@ -141,4 +442,83 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* CSS for dropdown buttons in topnav */
+.dropdown {
+  float: left;
+}
+
+.dropdownbtn {
+  float: left;
+  color: var(--text-color);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.dropdown-content {
+  display: none;
+  width: 100%;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: var(--text-color);
+  padding: 14px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  color: red;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropdownbtn {
+  color: red;
+} 
 
