--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
     padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     font-family: "Nexa";
     background: var(--background-color);
@@ -38,6 +42,20 @@ body {
     /* overflow:hidden; */
     line-height: 1.3;
 }
+
+a { 
+  cursor: pointer;
+}
+
+.unselectable {
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+}
+
 
 .center {
   position: absolute;
@@ -331,11 +349,30 @@ body {
   transition:color .15s ease-in;
 }
 
+/* .img-container {
+  
+  max-width: 700px;
+} 
+
+.img-styling {
+  
+}
+
+*/
+
+
 .project-img {
   flex: 1 1 auto;
+  box-shadow: rgba(2, 12, 27, 0.7) 0px 10px 30px -15px;
+}
+
+.project-img:hover {
+  flex: 1 1 auto;
+  box-shadow: rgba(2, 12, 27, 0.9) 0px 20px 40px -15px;
 }
 
 .project-img > img {
+  width: 700px;
   max-width: 700px;
 }
 
