--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
     font-weight: 400;
     background: var(--dark-background-color);
     color: var(--text-color);
-    line-height: 1.3;
+    line-height: 1.3em;
 }
 
 /* Reminder to yoself to do the media queries */
@@ -330,7 +330,7 @@ li a {
   font-size: 3.5rem;
   font-weight: 500;
   -webkit-font-smoothing: antialiased;
-  line-height: 1.2;
+  line-height: 1.2em;
   text-align: left;
   text-shadow: 2px 4px 5px rgba(0,0,0, 0.4), 0 -5px 35px rgba(255, 255, 255, 0.5);
 }
@@ -507,7 +507,8 @@ li a {
 /* these should be on a case-by-case-basis, unless its templated */
 .feature-banner {
   /* height: 300px; */
-  max-height: 300px;
+  max-width: 18vw;
+  /* max-height: 300px; */
 
 }
 
@@ -993,9 +994,8 @@ li a {
   flex-direction: row;
   flex: 1 1 100%;
   width: 100%;
-  min-height: 280px;
   border-top: 0;
-  margin-bottom: 100px;
+  margin-bottom: 5em;
 }
 
 .project-layout a {
@@ -1010,17 +1010,25 @@ li a {
 
 .project-img {
   /* flex: 1 1 auto; */
+  max-width: 50%;
+  max-height: 50%;
+  /* max-width: 50vw;
+  max-height: 50vh; */
   flex: 0 1 auto;
 }
 
 .project-img img {
-  max-width: 50vw;
-  max-height: 50vh;
-  box-shadow: var(--shadow-color) 0px 10px 30px -15px;
+  /* max-width: 50%;
+  max-height: 50%; */
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  /* box-shadow: var(--shadow-color) 0px 10px 30px -15px; */
+  box-shadow: var(--shadow-color) 0em 0.8em 2.4em -1.2em;
 }
 
 .project-img img:hover {
-  box-shadow: var(--shadow-hover-color) 0px 20px 40px -15px;
+  box-shadow: var(--shadow-hover-color) 0px 1.2em 2.8em -1.2em;
 }
 
 .bg-colour {
@@ -1050,7 +1058,7 @@ li a {
   background-color: var(--light-background-color);
   box-shadow: var(--shadow-color) 0px 10px 30px -15px;
   border-radius: 3px;
-  padding: 25px;
+  padding: 1em;
   z-index: 2;
   transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
   font-size: 1rem;
