--- a/style.css
+++ b/style.css
@@ -366,13 +366,31 @@ li a {
 
 #page {
   width: 100%;
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.footer {
+  width: 100%;
+  height: 3em;
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: var(--dark-background-color);
+}
+
+.footer span {
+  text-align: center;
 }
 
 /* Add spacing between project and header */
 #project-container {
   margin-top: 80px;
   width: 100%;
-  opacity: 1; 
+  /* opacity: 1;  */
   display: block;
 }
 
@@ -954,6 +972,11 @@ li a {
   width: 100%;
   max-width: 1600px;
   min-height: 100vh;
+  
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .projects-section {
