--- a/style.css
+++ b/style.css
@@ -972,12 +972,23 @@ li a {
   margin: 0 0.5rem 0.3rem;
 }
 
+.main-wrap {
+  width: 100%;
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.intro-projects {
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .main-container {
   padding: 0px 200px;
-  margin: 0px auto;
-  width: 100%;
-  max-width: 1600px;
-  min-height: 100vh;
   
   flex: 0 1 auto;
   display: flex;
@@ -989,7 +1000,6 @@ li a {
   position: relative;
   width: 100%;
   height: 100%;
-  top: 100vh;
   margin: 0px auto;
   padding: 150px 0px;
   display: flex;
@@ -1389,3 +1399,4 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 } 
+
