--- a/style.css
+++ b/style.css
@@ -1110,7 +1110,7 @@ li a {
 }
 
 .itch-button img {
-  max-width: 200px;
+  max-width: 150px;
 }
 
 .bg-colour {
@@ -1187,6 +1187,111 @@ li a {
   margin-top: 10px;
 }
 
+/* Mobile CSS */
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.mobile-navbar a {
+  text-decoration: none;
+  color: var(--text-color);
+  font-size: larger;
+}
+
+.mobile-navbar a:hover {
+  text-decoration: none;
+  color: var(--text-hover-color);
+}
+
+/* My Mobil nav */
+.mnavroot {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.mnavbutton {
+  /* background-color: var(--light-background-color); */
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3em;
+  height: 3em;
+  z-index: 10;
+}
+
+.mnavbutton img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.mnavroot #sidepanel {
+  background-color: var(--dark-background-color);
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 100;
+  width: 50%;
+  height: 100vh;
+  right: 100%;
+  /* transition: all .5s ease-in-out;
+  -webkit-transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out; */
+}
+
+#panelbutt {
+  display: none;
+}
+
+.mnavroot #overlaypanel {
+  background-color: rgba(255, 255, 255, 0.1);
+  /* display: block; */
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 99;
+  right: 100%;
+  /* transition: all .5s ease-in-out;
+  -webkit-transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out; */
+  /* top: 0;
+  right: 0; */
+}
+
 .mobile-layout {
   flex: 0 1 auto;
   display: flex;
@@ -1223,11 +1328,25 @@ li a {
     display: none;
   }
 
+  .mobile-navbar {
+    display: none;
+  }
+
 }
 
 /* hides web on smaller screens */
 @media only screen and (max-width: 800px) {
+  #header {
+    display: none;
+  }
   
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
+
   .main-container {
     padding: 50px;
   }
